--- a/src/styles/settings/variables.scss
+++ b/src/styles/settings/variables.scss
@@ -1,7 +1,6 @@
 $color-white: #ffffff;
-$color-ltGray: #eeeeee;
-$color-medGray: #dddddd;
-$color-dkGray: #555555;
+$color-ltBlack: #2c293b;
+$color-ltGold: #eeeaaa;
 
 $font-primary: 'Montserrat', sans-serif;
 
