--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,10 +1,49 @@
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 7rem;
+  padding: 0 2.5rem;
+  border-bottom: 0.1rem solid #eae9ed;
   .header__logo {
-    .logo__textTop {}
-    .logo__textBottom {}
-    .logo {
-      font-size: 4rem;
-      border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5rem;
+    color: $color-ltBlack;
+    text-decoration: none;
+    transition: .3s ease;
+    border: 1px solid transparent;
+    border-radius: 1rem;
+    &:hover {
+      border: 1px solid $color-ltBlack;
+    }
+    .logo__textTop {
+      font-size: 3rem;
+    }
+    .logo__textBottom {
+      font-size: 1.2rem;
+      letter-spacing: 0.55rem;
+    }
+  }
+  .header__purchase {
+    display: flex;
+    align-items: center;
+    .purchase__price {
+      font-size: 2rem;
+      padding: 1rem 1.5rem;
+      margin-right: 2rem;
+      background-color: $color-ltGold;
+      border-radius: 1.5rem;
+    }
+    .purchase__icon {
+      font-size: 3.5rem;
+      color: $color-ltBlack;
+      text-decoration: none;
+      transition: .3s ease;
+      &:hover {
+        transform: scale(1.2);
+      }
     }
   }
 }
