--- a/src/styles/settings/variables.scss
+++ b/src/styles/settings/variables.scss
@@ -1,6 +1,7 @@
 $color-white: #ffffff;
 $color-ltBlack: #2c293b;
 $color-ltGold: #eeeaaa;
+$color-gray: #666666;
 
 $font-primary: 'Montserrat', sans-serif;
 
