some styles shopping cart

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -31,7 +31,7 @@
       display: flex;
       align-items: center;
       margin-right: 2rem;
-      .purchase__price {
+      .purchase__quantity {
         font-size: 2rem;
         padding: 1rem 1.5rem;
         margin-right: 2rem;
