--- a/src/styles/settings/variables.scss
+++ b/src/styles/settings/variables.scss
@@ -2,6 +2,8 @@ $color-white: #ffffff;
 $color-ltBlack: #2c293b;
 $color-ltGold: #eeeaaa;
 $color-gray: #666666;
+$color-ltGray: #eeeeee;
+$color-redRemove: #dc4c4c;
 
 $font-primary: 'Montserrat', sans-serif;
 
