--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -1,5 +1,5 @@
 .home {
-  min-height: 100vh;
+  min-height: calc(100vh - 8.1rem);
   background-image: url("../../assets/5570863.jpg");
   background-size: cover;
   background-position: center;
