product adding and removing from shopping cart with summary

--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -47,6 +47,11 @@
           &:hover {
             border: 1px solid $color-ltBlack;
           }
+          &.added {
+            background-color: $color-medGray;
+            cursor: auto;
+            border: none;
+          }
         }
       }
     }
