--- a/src/styles/settings/variables.scss
+++ b/src/styles/settings/variables.scss
@@ -3,6 +3,7 @@ $color-ltBlack: #2c293b;
 $color-ltGold: #eeeaaa;
 $color-gray: #666666;
 $color-ltGray: #eeeeee;
+$color-medGray: #dddddd;
 $color-redRemove: #dc4c4c;
 
 $font-primary: 'Montserrat', sans-serif;
