--- a/src/styles/components/shoppingCart.scss
+++ b/src/styles/components/shoppingCart.scss
@@ -37,11 +37,14 @@
           .item__price {
             font-size: 1.7rem;
           }
-          .item__price {}
           .item__remove {
             font-size: 2.5rem;
             color: $color-redRemove;
             cursor: pointer;
+            transition: .3s ease;
+            &:hover {
+              transform: scale(1.3);
+            }
           }
         }
       }
