--- a/src/styles/components/shoppingCart.scss
+++ b/src/styles/components/shoppingCart.scss
@@ -3,22 +3,46 @@
   background-image: url("../../assets/5570863.jpg");
   background-size: cover;
   background-position: center;
+
   .container {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 4rem 1rem 0 1rem;
+
     .shoppingCart__products {
       flex-grow: .5;
-      .shoppingCart__title {
-        font-size: 2.3rem;
-        margin-bottom: 2rem;
+
+      .shoppingCart__headline {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 0.5rem 2rem 0.5rem;
+
+        .shoppingCart__title {
+          font-size: 2.5rem;
+        }
+
+        .shoppingCart__resetBtn {
+          @include btn-style;
+        }
       }
+
       .products__list {
         display: flex;
         flex-direction: column;
         gap: 2rem;
         margin: 0 1rem 2rem 1rem;
+
+        .products__empty {
+          font-size: 2rem;
+          margin: 2rem 0;
+
+          a {
+            color: $color-ltBlack;
+          }
+        }
+
         .products__item {
           display: flex;
           justify-content: space-between;
@@ -26,22 +50,27 @@
           width: 100%;
           padding: 1rem 2rem;
           background-color: $color-ltGray;
+
           .item__img {
             width: 5rem;
             height: 6rem;
           }
+
           .item__title {
             font-size: 1.5rem;
             max-width: 50%;
           }
+
           .item__price {
             font-size: 1.7rem;
           }
+
           .item__remove {
             font-size: 2.5rem;
             color: $color-redRemove;
             cursor: pointer;
             transition: .3s ease;
+
             &:hover {
               transform: scale(1.3);
             }
@@ -49,6 +78,7 @@
         }
       }
     }
+
     .shoppingCart__summary {
       display: flex;
       flex-direction: column;
@@ -57,25 +87,21 @@
       height: 18rem;
       padding: 1.5rem 2rem;
       background-color: $color-ltGray;
+
       .summary__title {
         font-size: 1.7rem;
       }
+
       .summary__price {
         font-size: 1.7rem;
       }
+
       hr {
         width: 100%;
       }
+
       .summary__btn {
-        font-size: 1.6rem;
-        color: $color-white;
-        background-color: $color-ltBlack;
-        padding: 1rem 3rem;
-        text-decoration: none;
-        transition: .2s ease;
-        &:hover {
-        background-color: $color-gray;
-      }
+        @include btn-style;
       }
     }
   }
