--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -25,8 +25,16 @@
         padding: 1rem;
         .book__title,
         .book__pages,
-        .book__price {
+        .book__price,
+        .book__qty {
           font-size: 1.5rem;
+        }
+        .book__qty {
+          display: flex;
+          margin-top: 1rem;
+          p {
+            margin-right: 0.8rem;
+          }
         }
         .book__author {
           font-size: 1.3rem;
@@ -47,35 +55,8 @@
           &:hover {
             border: 1px solid $color-ltBlack;
           }
-          &.added {
-            background-color: $color-medGray;
-            cursor: auto;
-            border: none;
-          }
         }
       }
     }
-    .home__arrow {
-      position: absolute;
-      bottom: 3rem;
-      left: 50%;
-      transform: translateX(-50%);
-      font-size: 4rem;
-      color: $color-gray;
-      cursor: pointer;
-      animation: bouncingArrow 2s infinite;
-    }
-  }
-}
-
-@keyframes bouncingArrow {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-30px);
-  }
-  60% {
-    transform: translateY(-15px);
   }
 }
