--- a/src/styles/components/shoppingCart.scss
+++ b/src/styles/components/shoppingCart.scss
@@ -61,6 +61,10 @@
             max-width: 50%;
           }
 
+          select {
+            padding: 0.7rem 1rem;
+          }
+
           .item__price {
             font-size: 1.7rem;
           }
