--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -3,6 +3,7 @@
   background-image: url("../../assets/5570863.jpg");
   background-size: cover;
   background-position: center;
+
   .container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(40rem, 40rem));
@@ -10,36 +11,44 @@
     justify-content: center;
     align-items: center;
     position: relative;
+
     .home__book {
       display: flex;
       width: 40rem;
       padding: 2rem;
       background-color: rgba(255, 255, 255, 0.7);
       position: relative;
+
       .book__img {
         width: 11rem;
       }
+
       .book__textBox {
         display: flex;
         flex-direction: column;
         padding: 1rem;
+
         .book__title,
         .book__pages,
         .book__price,
         .book__qty {
           font-size: 1.5rem;
         }
+
         .book__qty {
           display: flex;
           margin-top: 1rem;
+
           p {
             margin-right: 0.8rem;
           }
         }
+
         .book__author {
           font-size: 1.3rem;
           margin-bottom: 1rem;
         }
+
         .book__add {
           position: absolute;
           bottom: 1rem;
@@ -49,11 +58,12 @@
           color: $color-ltBlack;
           background-color: $color-ltGold;
           border-radius: 2rem;
-          border: 1px solid transparent;
+          border: 0.1rem solid transparent;
           cursor: pointer;
           transition: .2s ease;
+
           &:hover {
-            border: 1px solid $color-ltBlack;
+            border: 0.1rem solid $color-ltBlack;
           }
         }
       }
