--- a/src/styles/components/orderForm.scss
+++ b/src/styles/components/orderForm.scss
@@ -3,47 +3,57 @@
   background-image: url("../../assets/5570863.jpg");
   background-size: cover;
   background-position: center;
+
   .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 3rem 1rem 0 1rem;
+
     .orderForm__title {
       font-size: 3rem;
     }
+
     .orderForm__form {
       display: flex;
       flex-direction: column;
       align-items: center;
+
       .form__inputArea {
         display: flex;
         flex-direction: column;
         align-items: center;
+
         span {
           display: none;
           font-size: 1.2rem;
           padding: 0.3rem;
           color: $color-redRemove;
         }
+
         input {
           width: 30rem;
           font-size: 1.2rem;
           padding: 1.5rem;
           margin: 1rem 0;
-          border: 1px solid $color-medGray;
+          border: 0.1rem solid $color-medGray;
           border-radius: 1rem;
+
           &:invalid[focused="true"] {
             border: 0.1rem solid $color-redRemove;
+
             ~ span {
               display: block;
             }
           }
         }
       }
+
       p {
         font-size: 1.6rem;
         margin-top: 1rem;
       }
+
       button {
         @include btn-style;
         border-radius: 1rem;
