--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -3,6 +3,7 @@
   background-image: url("../../assets/5570863.jpg");
   background-size: cover;
   background-position: center;
+  margin-top: 8rem;
 
   .container {
     display: grid;
