--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,4 +5,4 @@
 @import "components/header";
 @import "components/home";
 @import "components/shoppingCart";
-@import "components/orderForm";
+@import "components/form";
