--- a/src/styles/components/form.scss
+++ b/src/styles/components/form.scss
@@ -3,6 +3,7 @@
   background-image: url("../../assets/5570863.jpg");
   background-size: cover;
   background-position: center;
+  margin-top: 8rem;
 
   .container {
     display: flex;
@@ -49,15 +50,32 @@
         }
       }
 
-      p {
+      p, a {
         font-size: 1.6rem;
         margin-top: 1rem;
+        color: $color-ltBlack;
       }
 
-      button {
-        @include btn-style;
-        border-radius: 1rem;
+      .form__buttons {
         margin-top: 3rem;
+
+        a {
+          @include btn-style;
+          border-radius: 1rem;
+          color: $color-ltBlack;
+          background-color: $color-ltGray;
+          border: 0.1rem solid $color-ltBlack;
+          margin-right: 1rem;
+
+          &:hover {
+            background-color: $color-ltGold;
+          }
+        }
+
+        button {
+          @include btn-style;
+          border-radius: 1rem;
+        }
       }
     }
   }
