--- a/src/styles/components/shoppingCart.scss
+++ b/src/styles/components/shoppingCart.scss
@@ -3,6 +3,7 @@
   background-image: url("../../assets/5570863.jpg");
   background-size: cover;
   background-position: center;
+  margin-top: 8rem;
 
   .container {
     display: flex;
@@ -35,8 +36,15 @@
         margin: 0 1rem 2rem 1rem;
 
         .products__empty {
+          display: flex;
+          justify-content: center;
+          flex-wrap: wrap;
           font-size: 2rem;
           margin: 2rem 0;
+
+          p {
+            margin-right: 1rem;
+          }
 
           a {
             color: $color-ltBlack;
